# ooxClone

./: .gitignore  README.md
tool/: CHANGELOG.md  oox.cabal  prototype.cabal
tool/examples/: array.oox  array2.oox  exceptions.oox  fib.oox  intLinkedlist.oox  list_min.oox  locks.oox  mergesort.oox  philosophers.oox  simple2.oox  test2.oox
tool/examples/array/: array1.oox  array2.oox
tool/examples/benchmarkpv/: bsort.oox  divByN.oox  memberOf.oox  min.oox  pullUp.oox  readme.txt
tool/examples/benchmarksvcomp/c/pthread/: fib_bench_longer-1.oox  fib_bench_longer-1xx.oox  fib_bench_longer-2. orig  fib_bench_longer-2.oox orig
tool/examples/benchmarksvcomp/java/algorithms/: RedBlackTree-FunSat01.oox
tool/examples/simple/: concursimple1.oox  deadlock.oox  exceptions.oox  float.oox  locks1.oox  simple1.oox  simplelist.oox  testPOR.oox
tool/src/: Logger.hs  Main.hs
tool/src/Analysis/: Phase.hs  SymbolTable.hs
tool/src/Analysis/CFA/: Analysis.hs  CFG.hs
tool/src/Analysis/Type/: Analysis.hs  Typeable.hs
tool/src/Control/Monad/: Extra.hs
tool/src/Data/: Configuration.hs  Error.hs  Positioned.hs  Stack.hs  Statistics.hs
tool/src/Execution/: Effects.hs  Engine.hs  Errors.hs  Evaluation.hs  Evaluation.hs-boot  ExecutionState.hs  Phase.hs  Result.hs  Semantics.hs  State.hs  Verification.hs
tool/src/Execution/Concurrency/: Lock.hs  Lock.hs-boot  POR.hs  POR.hs-boot  Thread.hs  Thread.hs-boot
tool/src/Execution/Memory/: AliasMap.hs  AliasMap.hs-boot  Heap.hs  Heap.hs-boot
tool/src/Execution/Semantics/: AssertAssume.hs  Assignment.hs  Concretization.hs  Concretization.hs-boot  Evaluation.hs  Exception.hs  Heap.hs  PartialOrderReduction.hs  Process.hs  StackFrame.hs  Thread.hs
tool/src/Execution/State/: AliasMap.hs  Evaluation.hs  Heap.hs  InterleavingConstraints.hs  LockSet.hs  PathConstraints.hs  Thread.hs
tool/src/Language/: Syntax.hs
tool/src/Language/Syntax/: DSL.hs  Fold.hs  Lenses.hs  Pretty.hs
tool/src/Parsing/: Labeling.hs  Lexer.x  Parser.hs  Phase.hs
tool/src/Polysemy/: Cache.hs  LocalState.hs
tool/src/Syntax/: DSL.hs  Fold.hs  Lenses.hs  Pretty.hs  Syntax.hs
tool/src/Text/: Pretty.hs
tool/src/Verification/: Result.hs  Verifier.hs
tool/tests/: Testoox.hs
tool/tst/: array.oox  bubblesort.oox  deadlock.oox  fib.oox  list.oox  mergesort.oox  mergesortMUTCMP2.oox  simple1.oox  test.oox  testPOR.oox
tool/tst/bugs/: 0.oox
