cabal-version:          3.0
name:                   oox
version:                0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
author:                 S. Koppier
maintainer:             stefan.koppier@outlook.com
-- copyright:
category:               Testing
extra-source-files:     CHANGELOG.md

executable app
    other-modules:          Language.Syntax
                          , Language.Syntax.Lenses
                          , Language.Syntax.Fold
                          , Language.Syntax.DSL
                          , Language.Syntax.Pretty
                          , Parsing.Lexer
                          , Parsing.Parser
                          , Parsing.Labeling
                          , Parsing.Phase
                          , Analysis.Phase
                          , Analysis.SymbolTable
                          , Analysis.Type.Analysis
                          , Analysis.Type.Typeable
                          , Analysis.CFA.CFG
                          , Analysis.CFA.Analysis
                          , Execution.Phase
                          , Execution.Engine
                          , Execution.Effects
                          , Execution.Errors
                          , Execution.Semantics
                          , Execution.Semantics.Concretization
                          , Execution.Semantics.StackFrame
                          , Execution.Semantics.Exception
                          , Execution.Semantics.Heap
                          , Execution.Semantics.Process
                          , Execution.Semantics.Thread
                          , Execution.Semantics.Evaluation
                          , Execution.Semantics.PartialOrderReduction
                          , Execution.Semantics.Assignment
                          , Execution.State
                          , Execution.State.PathConstraints
                          , Execution.State.LockSet
                          , Execution.State.Thread
                          , Execution.State.AliasMap
                          , Execution.State.Heap
                          , Execution.State.InterleavingConstraints
                          , Execution.State.Evaluation
                          , Execution.Result
                          , Execution.Verification
                          , Data.Positioned
                          , Data.Error
                          , Data.Configuration
                          , Data.Statistics
                          , Data.Stack
                          , Text.Pretty
                          , Polysemy.Cache
                          , Control.Monad.Extra
                          , Logger
    main-is:                Main.hs
    build-depends:          base                 ^>=4.14.3.0
                          , parsec               ^>=3.1.14.0
                          , array                ^>=0.5.4.0
                          , fgl                  ^>=5.7.0.3
                          , polysemy             ^>=1.3.0
                          , polysemy-plugin      ^>=0.3.0.0
                          , lens                 ^>=4.19.2
                          , time                 ^>=1.9.3
                          , containers           ^>=0.6.2.1
                          , unordered-containers ^>=0.2.13.0
                          , hashable             ^>=1.3.0.0
                          , pretty               ^>=1.1.3.6
                          , z3                   ^>=408.2
                          , optparse-applicative ^>=0.16.1.0
                          , random-shuffle       ^>=0.0.4
                          , HUnit                ^>=1.6.2.0
    build-tool-depends:     alex:alex ^>=3.2.6
    hs-source-dirs:         src
    default-language:       Haskell2010
    default-extensions:     TupleSections
                          , TemplateHaskell
                          , DuplicateRecordFields
                          , RecordWildCards
                          , NamedFieldPuns
                          , FlexibleInstances
                          , FlexibleContexts
                          , FunctionalDependencies
                          , MultiParamTypeClasses
                          , TemplateHaskell
                          , GADTs
                          , DataKinds
                          , FlexibleContexts
                          , PolyKinds
                          , RankNTypes
                          , LambdaCase
                          , ScopedTypeVariables
                          , TypeOperators
    ghc-options:            -Wall
                            -fplugin=Polysemy.Plugin
                            -O2
